# rs-kernel_bootstrap

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lang_items.rs  lib.rs
src/arch/: linker.ld  multiboot_header.s
src/arch/x86/: boot.s
src/arch/x86_64/: boot.s  linker.ld  long_mode_init.s  multiboot_header.s
