[package]
name = "os"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["os", "operating", "system"]
description = "minimal operating system written in rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-os.git"
homepage = "https://github.com/nathanfaucett/rs-os"

[dependencies]
rlibc = "1.0"

[dependencies.vga]
#git = "https://github.com/nathanfaucett/rs-vga.git"
path = "../rs-vga"

[dependencies.multiboot2]
#git = "https://github.com/nathanfaucett/rs-multiboot2.git"
path = "../rs-multiboot2"

[dependencies.kernel]
#git = "https://github.com/nathanfaucett/rs-kernel.git"
path = "../rs-kernel"

[dependencies.paging]
#git = "https://github.com/nathanfaucett/rs-paging.git"
path = "../rs-paging"

[dependencies.memory]
#git = "https://github.com/nathanfaucett/rs-memory.git"
path = "../rs-memory"

[lib]
crate-type = ["staticlib"]
